# Scrabble

./: CMakeLists.txt  Makefile  main.cpp  scrabble
docs/Abstracción Práctica 1 edd/: Abstracción de objetos  Descripción  Descripción (restantes)  Reportes  Reportes (restantes)  Servicios críticos  Servicios críticos (restantes)  algoritmo inicio partida  to do
ejecutable/: scrabble
include/: Archivo.h  Cola.h  Jugador.h  Letra.h  ListaEnlazada.h  MotorDeJuego.h  Nodo.h  Nodo.h.cpp  Palabra.h  Partida.h  Pila.h  Reporte.h  Tablero.h
src/: Archivo.cpp  Jugador.cpp  Letra.cpp  MotorDeJuego.cpp  Palabra.cpp  Partida.cpp  Reporte.cpp  Tablero.cpp  main.cpp
util/: Archivo_Ejemplo.csv  palabras.csv  prueba.cvs
